(lms) universal test UI (#32)
* add UniversalUITest

* add UniversalUITest-fix

* add UniversalUITest-fix2

* add UniversalUITest-fix3